# grupo3_HPEC_2020

./: README.md  trapezoidal.m
Homework_1/Memory leaks/Report/: case4.txt
Homework_1/Memory leaks/memcheck/: configure.ac
Homework_1/Memory leaks/memcheck/lib/: Makefile.am  libmemcheck.c  libmemcheck.h
Homework_1/Memory leaks/memcheck/src/: build  memcheck  memcheck.c
Homework_1/Valgrind Usage/Report/: Outputcase1.txt  Outputcase2.txt  Outputcase3.txt  Report.docx  ~$Report.docx
Homework_1/Valgrind Usage/Source Files/Case 1/: case1
Homework_1/Valgrind Usage/Source Files/Case 2/: case2
Homework_1/Valgrind Usage/Source Files/Case 3/: case3
Homework_2/OpenMP/src/: makefile  pi.c  pi_omp_private.c  pi_omp_teams.c  pi_omp_thread.c
project1/Custom Meta-layer/: trapezoidal.m
project1/Custom Meta-layer/meta-tec/conf/: layer.conf
project2/Custom Meta-layer/Image Outputs/: YUV_intrinsics.yuv
project2/Custom Meta-layer/meta-hpec/: rgb2yuv-1.0.bb  rgb2yuv-intrinsics_0.1.bb  rgb2yuv_pthread-1.0.bb
project2/Custom Meta-layer/meta-hpec/rgb2yuv-intrinsics-0.1/rgb2yuv-intrinsics-0.1/: configure.ac  makeExec.sh
project2/Custom Meta-layer/meta-hpec/rgb2yuv-intrinsics-0.1/rgb2yuv-intrinsics-0.1/src/: Makefile.am  rgb2yuv_intrinsics.c
project2/Prototyping/: opencv
project3/: sgbm.cpp
project3/Sources/: Test_No_GUI.pro  diff_and_error.h  histogram.cpp  histogram.h  main.cpp  sgbm.cpp
project3/mem_opt/: mainwindow.cpp  sgbm.cpp  sgbm.h  stereoalgo.cpp
project3/multi_threading/: mainwindow.cpp  mainwindow.h  mainwindow.ui  sgbm.cpp  stereoalgo.h
(+29 files in other folders)
