AC_PREREQ([2.69])
AC_INIT([rgb2yuv_intrinsics], [1.0], [vsecades@qxdev.com])
AC_CONFIG_SRCDIR([src/rgb2yuv_intrinsics.c])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE([-Wall -Werror subdir-objects foreign])
# Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile
                 src/Makefile])
AC_OUTPUT

